examples/tests/snapshots/26_menu_bar__headless_snapshot_left_right_and_activation.snap
---
source: examples/tests/26_menu_bar.rs
expression: view
---
File·Edit·View····································
··················································
··················································
··················································
··················································
··················································
··················································
··················································
··················································
··················································
··················································
··················································
··················································
··················································
··················································
··················································
··················································
··················································
··················································
··················································
··················································
··················································
·Click·a·label,·or·Tab+Enter,·to·open·it.·········
·Left/Right·switch·labels,·hover·switches·too.····
·Last·action:·(none·yet)··························

--- frame ---
File·Edit·View····································
··················································
··················································
··················································
··················································
··················································
··················································
··················································
··················································
··················································
··················································
··················································
··················································
··················································
··················································
··················································
··················································
··················································
··················································
··················································
··················································
··················································
·Click·a·label,·or·Tab+Enter,·to·open·it.·········
·Left/Right·switch·labels,·hover·switches·too.····
·Last·action:·(none·yet)··························

--- frame ---
File·Edit·View····································
··················································
··················································
··················································
··················································
··················································
··················································
··················································
··················································
··················································
··················································
··················································
··················································
··················································
··················································
··················································
··················································
··················································
··················································
··················································
··················································
··················································
·Click·a·label,·or·Tab+Enter,·to·open·it.·········
·Left/Right·switch·labels,·hover·switches·too.····
·Last·action:·(none·yet)··························

--- frame ---
File·Edit·View····································
·····Cut··········································
·····Copy·········································
·····[x]·Word·Wrap································
··················································
··················································
··················································
··················································
··················································
··················································
··················································
··················································
··················································
··················································
··················································
··················································
··················································
··················································
··················································
··················································
··················································
··················································
·Click·a·label,·or·Tab+Enter,·to·open·it.·········
·Left/Right·switch·labels,·hover·switches·too.····
·Last·action:·(none·yet)··························

--- frame ---
File·Edit·View····································
·····Cut··········································
·····Copy·········································
·····[x]·Word·Wrap································
··················································
··················································
··················································
··················································
··················································
··················································
··················································
··················································
··················································
··················································
··················································
··················································
··················································
··················································
··················································
··················································
··················································
··················································
·Click·a·label,·or·Tab+Enter,·to·open·it.·········
·Left/Right·switch·labels,·hover·switches·too.····
·Last·action:·(none·yet)··························

--- frame ---
File·Edit·View····································
··················································
··················································
··················································
··················································
··················································
··················································
··················································
··················································
··················································
··················································
··················································
··················································
··················································
··················································
··················································
··················································
··················································
··················································
··················································
··················································
··················································
·Click·a·label,·or·Tab+Enter,·to·open·it.·········
·Left/Right·switch·labels,·hover·switches·too.····
·Last·action:·Copy································
